# cow-solver-skeleton

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: autopilot.shadow.toml  driver.shadow.toml  driver.staging.toml.example
deploy/hetzner/: docker-compose.prod.yml
docs/: CCMPIM_Paper.docx  anomaly-detection.md
docs/archive/: README.md
docs/cow-spec/: DEPLOY_RUNBOOK.md  README.md
docs/current/: DEPLOYMENT.md  NEXT_STEPS.md  STATUS.md
scripts/: _analyze_common.py  analyze_classifier_data.py  analyze_competitors.py  analyze_cow_rings.py  analyze_joint_clearing.py  analyze_router_solutions.py  auto_seed_labels.py  backfill_jsonl.py  backfill_scores.py  backfill_winner_price_scores.py  cow_driver_log_diagnose.py  diag_winner_prices.py  diagnose_bucket_losses.py  estimate_economics.py  extract_features.py  inspect_winner_orders.py  liveness.py  reconcile_loop.py  refresh_ghost_set.py  seed_scam_labels.py  setup_v3_allowances.py  shadow_poller.py  sync_competitions.py  train_classifier.py  validate_data.py  verify_24h.py
src/: config.py  log.py  main.py  metrics.py
src/encoder/: __init__.py  interactions.py  v2_calldata.py  v3.py  v3_calldata.py  v3_path.py
src/liquidity/: __init__.py  aggregator.py  base.py  v2.py  v3.py
src/models/: auction.py  order.py  solution.py
src/persistence/: db.py  models.py
src/routing/: amm_v2.py  amm_v3.py  multicall.py  multihop.py  oneinch.py  rpc.py  v3_batched.py
src/shadow/: analyzer.py  cli.py  cow_api.py  jsonl_analyzer.py  logger.py  persist.py  reconcile.py  scoring.py  token_outcomes.py
src/solver/: base.py  ebbo.py  joint_clearing.py  naive.py  orchestrator.py  price_refiner.py  router.py
tests/: test_config.py  test_log.py  test_main.py  test_metrics.py  test_openapi_compliance.py
tests/fixtures/: sample_auction.json
tests/fork/: README.md  conftest.py  test_v3_encoder_onchain.py
tests/test_edge/: _helpers.py  conftest.py  test_anomaly_scorer.py  test_bipartite.py  test_composer.py  test_feature_engineering.py  test_feature_extractor.py  test_ghost_detector.py  test_hyperopt.py  test_label_generator.py  test_label_generator_threshold.py  test_long_tail_router.py  test_model_registry.py  test_multi_party.py  (+6 more)
(+65 files in other folders)
