[project]
name = "cow-solver-skeleton"
version = "0.1.0"
description = "CoW Protocol solver — public skeleton"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    # curl_cffi: libcurl-via-Python with browser-TLS fingerprint impersonation.
    # Required for the CoW competition API endpoint (CloudFront fronted),
    # which 429s our standard httpx client by TLS-fingerprint despite a
    # successful raw curl. Used only in scripts/sync_competitions.py;
    # production solve path stays on httpx.
    "curl_cffi>=0.7",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "redis>=5.2",
    "web3>=7.6",
    "tenacity>=9.0",
    "rustworkx>=0.15",
    "scipy>=1.14",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.1",
    "eth-abi>=5.1",
    "lightgbm>=4.5",
    "optuna>=3.6",
    "scikit-learn>=1.5",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-redis>=4.6",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src", "edge", "scripts"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["src/persistence/migrations/versions/"]

[[tool.mypy.overrides]]
module = ["edge.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["eth_abi", "eth_abi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lightgbm", "lightgbm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["optuna", "optuna.*"]
ignore_missing_imports = true
